trunk/Archive2/b2/4b9357c0dd1946/output
main.cpp: In instantiation of 'struct process(It, It) [with It = __gnu_cxx::__normal_iterator<int*, std::vector<int> >]::__lambda0':
main.cpp:16:22:   required from 'bool process(It, It) [with It = __gnu_cxx::__normal_iterator<int*, std::vector<int> >]'
main.cpp:25:67:   required from here
main.cpp:12:55: error: 'const' qualifiers cannot be applied to 'int&'
                        [](  const decltype(*first)& i )
                                                       ^
main.cpp:12:53: error: 'const' qualifiers cannot be applied to 'int&'
                        [](  const decltype(*first)& i )
                                                     ^
main.cpp:12: confused by earlier errors, bailing out
